--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">Quiz</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_android_trivia_question">Android Quiz (%1$d/%2$d)</string>
+    <string name="button_start">Start</string>
+    <string name="tv_result">Result</string>
+    <string name="button_share">Share</string>
+    <string name="button_back">Back</string>
+    <string name="button_exit">Exit</string>
+    <string name="button_previous">Previous</string>
+    <string name="button_next1">Next</string>
+    <string name="button_next2">Submit</string>
+    <string name="picture_result">picture_result</string>
+    <string name="previous">Previous</string>
+    <string name="next">Next</string>
 </resources>
